--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MXCPLWY5XV"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-MXCPLWY5XV');
+  </script>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" sizes="910x613" href="/TNCropped.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
